[KM-257] 수정:토큰 권한 확인 코드 예외 종류 및 구조 수정